--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,29 @@
-version: '3.8'
-services:
-  web:
-    build: .
-    ports:
-      - "8000:8000"
-    environment:
-      - DATABASE_URL=postgresql://postgres:secret@db:5432/library
-    depends_on:
-      - db
+version: '3'
 
-  db:
-    image: postgres:13
+services:
+  postgres:
+    image: postgres:latest
+    container_name: my_postgres
     environment:
-      POSTGRES_DB: library
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: secret
+      POSTGRES_USER: myuser
+      POSTGRES_PASSWORD: mypassword
+      POSTGRES_DB: mydatabase
     ports:
       - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: my_fastapi_app
+    ports:
+      - "8000:8000"
+    depends_on:
+      - postgres
+    environment:
+      DATABASE_URL: postgresql+psycopg2://myuser:mypassword@postgres:5432/mydatabase
+
+volumes:
+  postgres_data:
