--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ fastapi==0.111.1
 fastapi-cli==0.0.4
 fastapi-users==13.0.0
 greenlet==3.0.3
+gunicorn==22.0.0
 h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
@@ -41,6 +42,7 @@ pydantic_core==2.20.1
 Pygments==2.18.0
 PyJWT==2.8.0
 pytest==8.3.2
+pytest-asyncio==0.23.8
 python-dotenv==1.0.1
 python-jose==3.3.0
 python-multipart==0.0.9
